# p2pmsg

./: Cargo.toml  README.md
libp2p-intro/: Cargo.toml
p2pmsg-client/: Cargo.toml
p2pmsg-client/src/: main.rs
p2pmsg-lib/: Cargo.toml
p2pmsg-lib/src/: client.rs  error.rs  lib.rs  protocol.rs
p2pmsg-lib/src/protocol/: codec.rs  id.rs  message.rs
