[package]
name = "libp2p-intro"
version = "0.1.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libp2p = {version="0.30", features=["tcp-tokio", "mdns-tokio"]}
anyhow = "1.0"
tokio = {version="0.3", features=["full"]}
structopt = "0.3"
futures = "0.3"
env_logger = "0.8"

[workspace]
