[package]
name = "p2pmsg-lib"
version = "0.1.0"
authors = ["Ivan <ivan.zderadicka@gmail.com>"]
edition = "2018"

[dependencies]
tokio = {version="0.2.22", features=["full"]}
tokio-util = {version="0.3", features=["codec"]}
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
bytes = "0.5"
futures = "0.3"
lazy_static = "1.4"
serde_json = "1.0"

